; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/host/extr_tcp.c_nvme_tcp_data_ready.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/host/extr_tcp.c_nvme_tcp_data_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32, %struct.nvme_tcp_queue* }
%struct.nvme_tcp_queue = type { i32, i32, i64 }

@nvme_tcp_wq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sock*)* @nvme_tcp_data_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvme_tcp_data_ready(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  %3 = alloca %struct.nvme_tcp_queue*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %4 = load %struct.sock*, %struct.sock** %2, align 8
  %5 = getelementptr inbounds %struct.sock, %struct.sock* %4, i32 0, i32 0
  %6 = call i32 @read_lock(i32* %5)
  %7 = load %struct.sock*, %struct.sock** %2, align 8
  %8 = getelementptr inbounds %struct.sock, %struct.sock* %7, i32 0, i32 1
  %9 = load %struct.nvme_tcp_queue*, %struct.nvme_tcp_queue** %8, align 8
  store %struct.nvme_tcp_queue* %9, %struct.nvme_tcp_queue** %3, align 8
  %10 = load %struct.nvme_tcp_queue*, %struct.nvme_tcp_queue** %3, align 8
  %11 = icmp ne %struct.nvme_tcp_queue* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.nvme_tcp_queue*, %struct.nvme_tcp_queue** %3, align 8
  %14 = getelementptr inbounds %struct.nvme_tcp_queue, %struct.nvme_tcp_queue* %13, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br label %17

17:                                               ; preds = %12, %1
  %18 = phi i1 [ false, %1 ], [ %16, %12 ]
  %19 = zext i1 %18 to i32
  %20 = call i64 @likely(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %30

22:                                               ; preds = %17
  %23 = load %struct.nvme_tcp_queue*, %struct.nvme_tcp_queue** %3, align 8
  %24 = getelementptr inbounds %struct.nvme_tcp_queue, %struct.nvme_tcp_queue* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @nvme_tcp_wq, align 4
  %27 = load %struct.nvme_tcp_queue*, %struct.nvme_tcp_queue** %3, align 8
  %28 = getelementptr inbounds %struct.nvme_tcp_queue, %struct.nvme_tcp_queue* %27, i32 0, i32 0
  %29 = call i32 @queue_work_on(i32 %25, i32 %26, i32* %28)
  br label %30

30:                                               ; preds = %22, %17
  %31 = load %struct.sock*, %struct.sock** %2, align 8
  %32 = getelementptr inbounds %struct.sock, %struct.sock* %31, i32 0, i32 0
  %33 = call i32 @read_unlock(i32* %32)
  ret void
}

declare dso_local i32 @read_lock(i32*) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @queue_work_on(i32, i32, i32*) #1

declare dso_local i32 @read_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
